# top-product-system-be

./: .dockerignore  .env.example  .env.staging  .env.staging.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.staging  Makefile  Makefile.deployment  README.md  alembic.ini  deploy.sh  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py  scripts.py
alembic/: env.py
nginx/: nginx.conf
scripts/: #HOW-TO-USE.md  api_key_test.py  benchmark_dut.py  bootstrap_rbac.py  compare_formats.py  compare_integration.py  convert_dvt_to_mc2.py  create_user.py  debug_compare_call.py  debug_compare_local.py  debug_compare_request.py  debug_compare_sample_data.py  debug_duplicate_case_test.py  debug_duplicate_join.py  delete_compiled.py  delete_uploads_and_run_tests.py  diagnose_pa_empty.py  frontend_integration_sim.py  inspect_backend_app.py  integration_http.py  integration_ui_simulate.py  post_compare.py  run_multi_dut_analysis.py  run_multi_dut_analysis_alt.py  run_real_comparison.py  run_tests_with_server.ps1  smoke_generate_xlsx.py  srom_filter_implementation_summary.py  test_dashboard.py  test_dvt_mc2_api.py  test_filter_performance.py  test_isn_patterns.py  test_log_parser_demo.py  test_optimizations.py  test_pa_adjusted_power_scoring.py  test_pa_endpoints.py  test_pa_mid_mean_example.py  test_pa_sorting.py  test_pa_sorting_performance.py  test_pa_srom_endpoints.py  (+6 more)
shell-scripts/: README.md  backup_db.sh  deploy-staging.sh  make-migration.sh  refresh-env.sh  restore_db.sh  run-migrations-docker.sh  run-migrations.sh  update-code.sh
tests/: conftest.py  do_not_test_dut_router.py  test_api_integration_sample.py  test_api_xlsx.py  test_auth_flow.py  test_auth_token_normalization.py  test_cleanup_and_persist.py  test_compare.py  test_compare_download.py  test_compare_join_on.py  test_criteria_filtering.py  test_dut_api_router_fail.py  test_dut_external_endpoints.py  test_dut_summary.py  test_dvt_to_mc2_additional.py  test_dvt_to_mc2_converter.py  test_end_to_end_filepair.py  test_evm_per_scoring.py  test_format_compare_api.py  test_formatting_and_margin.py  test_human_csv_and_margin.py  test_mc2_dvt_parity.py  test_multi_dut_api.py  test_pa_adjusted_power.py  test_parsing.py  (+14 more)
(+82 files in other folders)
